--- a/viz/package.json
+++ b/viz/package.json
@@ -1,40 +1,37 @@
 {
-  "name": "fritter-starter",
-  "version": "0.0.0",
+  "name": "fritter",
+  "version": "0.1.0",
+  "author": "Uriel/Moises",
   "private": true,
   "scripts": {
+    "start": "node ./bin/www",
+    "awesome": "nodemon ./bin/www",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "awesome": "nodemon ./bin/www",
-    "start": "node ./bin/www"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.18.1",
-    "cookie-parser": "^1.4.5",
+    "axios-debug-log": "^0.8.0",
+    "cookie-parser": "~1.4.3",
+    "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
-    "debug": "^2.6.9",
+    "debug": "~2.6.9",
     "dotenv": "^8.2.0",
-    "express": "^4.16.4",
+    "express": "~4.16.0",
     "express-session": "^1.17.1",
-    "morgan": "^1.9.1",
-    "nodemon": "^2.0.6",
+    "morgan": "~1.9.0",
+    "nodemon": "^2.0.4",
     "sqlite3": "^5.0.0",
-    "vue": "^2.6.12",
+    "vue": "^2.5.17",
     "vue-cookie": "^1.1.4",
-    "vue-router": "^3.4.8",
-    "vuetify": "^2.3.16",
-    "vuex": "^3.5.1"
+    "vue-router": "^3.4.8"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-babel": "^3.12.0",
+    "@vue/cli-plugin-eslint": "^3.0.3",
     "@vue/cli-service": "^4.5.8",
-    "sass": "^1.28.0",
-    "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vuetify": "^2.0.7",
-    "vue-template-compiler": "^2.6.12",
-    "vuetify-loader": "^1.6.0"
+    "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
     "root": true,
@@ -45,9 +42,7 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {
-      "no-console": "off"
-    },
+    "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
     }
