--- a/viz/package.json
+++ b/viz/package.json
@@ -20,9 +20,13 @@
     "morgan": "^1.9.1",
     "nodemon": "^2.0.6",
     "sqlite3": "^5.0.0",
+    "vega": "^5.20.0",
+    "vega-embed": "^6.16.0",
+    "vega-lite": "^5.0.0",
     "vue": "^2.6.12",
     "vue-cookie": "^1.1.4",
     "vue-router": "^3.4.8",
+    "vue-vega": "^1.0.0-alpha.13",
     "vuetify": "^2.3.16",
     "vuex": "^3.5.1"
   },
